# ufoldy

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  tags
examples/: UFOldy_example.ipynb  UFOldy_example_limitedE.ipynb
examples/.ipynb_checkpoints/: UFOldy_example_limitedE-checkpoint.ipynb
examples/Data/: ENDF_Sig_115Inng115mIn.csv  ENDF_Sig_115Innn'116mIn.csv  ENDF_Sig_238Unfis.csv  ENDF_Sig_24Mgnp24Na.csv  ENDF_Sig_27Alna24Na.csv  ENDF_Sig_27Alnp27Mg.csv  ENDF_Sig_46Tinp46Sc.csv  ENDF_Sig_47Tinp47Sc.csv  ENDF_Sig_48Tinp48Sc.csv  ENDF_Sig_54Fena51Cr.csv  ENDF_Sig_54Fenp54Mn.csv  ENDF_Sig_56Fenp56Mn.csv  ENDF_Sig_58Ninp58Co.csv
examples/Spectra/: 1102_PWR-UO2-15.txt  172_Superphenix.txt
tests/: test_llplf.py  test_piecewisefunction.py  test_piecewiselinear.py  test_pievewisefunction.py  test_reactionrate.py
ufoldy/: __init__.py  llplf.py  piecewisefunction.py  piecewiselinear.py  reactionrate.py  ufoldy.py  ufoldy_llplf.py
