[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ufoldy"
authors = [{name = "Gert Van den Eynde", email = "gvdeynde@sckcen.be"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/gvdeynde/ufoldy"
